--- a/client/pic.qrc
+++ b/client/pic.qrc
@@ -6,5 +6,7 @@
         <file>half.png</file>
         <file>redfull.png</file>
         <file>redhalf.png</file>
+        <file>unnamed.jpg</file>
+        <file>pososi.jpg</file>
     </qresource>
 </RCC>
